adding Spielstatus events

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Willkommen beim Ethereum basierten Schere Stein Papier!</h1>       
         <h2>Beschreibung...</h2>
+        <p id="Spielstatus"></p>
         <button id="connectwallet">Connect wallet</button>
         <p><button id="spielerzeugen">Spiel erzeugen</button></p>
         <p id="addresseanzeigen"></p>
