--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <h1>Willkommen beim Ethereum basierten Schere Stein Papier!</h1>       
-        <h2>Beschreibung...</h2>
+        <h2>Um zu spielen, müssen sich beide Spieler über MetaMask mit der DApp verbinden. Dann kann ein Spieler ein neues Spiel erzeugen, die Addresse des Spiels wird angezeigt. Beide Spieler initialisieren das Spiel mit der angezeigten Addresse. Anschließend kann ein Spieler den Spieleinsatz festlegen, der andere Spieler setzt den gleichen Einsatz. Der Spielstatus sowie der Gewinner werden angezeigt. Viel Spaß!</h2>
         <p id="Spielstatus"></p>
         <button id="connectwallet">Connect wallet</button>
         <p><button id="spielerzeugen">Spiel erzeugen</button></p>
